# berg-nih-pipeline

Documents/DevProjects/RAGs/berg_nih/: .gitignore  AUTOMATION_STRATEGY.md  BREAKTHROUGH_SUMMARY.md  MORNING_RESUME_PLAN.md  PIPELINE_DIAGRAM.md  PROJECT_STATUS.md  QUICK_RESUME.md  README.md  RUN_PIPELINE.md  SESSION_SUMMARY.md  YOUTUBE_SETUP.md  analyze_durations.py  distribution_analyzer.py  json_analyzer.py  main.py  notes_local.md  pmc_titles_for_review_culled.csv  proxies_example.txt  pyproject.toml  test_proxies.txt
Documents/DevProjects/RAGs/berg_nih/data/output/: pmc_titles_for_review.csv  pmc_titles_for_review_culled.csv
Documents/DevProjects/RAGs/berg_nih/scripts/: berg_explorer.py  create_filtered_catalog.py  enhance_progress_database.py  find_resume_index.py  json_to_csv_converter.py  merge_batch_files.py  merge_transcripts.py  pmc_fetcher.py  pmc_fulltext_fetcher.py  pmc_title_fetcher.py  progress_tracker.py  transcript_extractor.py  transcript_extractor_human_batch.py  transcript_extractor_proxy.py  verify_progress_against_filtered.py  vpn_batch_orchestrator.py  youtube_video_fetcher.py
Documents/DevProjects/RAGs/berg_nih/src/berg_nih/: __init__.py
Documents/DevProjects/RAGs/berg_nih/tests/: test_pmc_fetcher.py
