[project]
name = "berg-nih"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.179.0",
    "isodate>=0.7.2",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "youtube-transcript-api>=1.2.2",
]
